fix: authentication errors regarding to the last update